--- a/app/src/main/res/layout/fragment_favorite_recipes.xml
+++ b/app/src/main/res/layout/fragment_favorite_recipes.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/lightGray"
-    tools:context=".ui.fragments.FavoriteRecipesFragment">
+    tools:context=".ui.fragments.favourites.FavoriteRecipesFragment">
 
     <TextView
         android:layout_width="match_parent"
